[tool.poetry]
name = "rubix-bacnet-master"
version = "1.0.2"
description = ""
authors = ["NubeDev <aidan@envrioservices.com.au>"]

[tool.poetry.dependencies]
python = "^3.6"
bacpypes = "^0.18.4"
gunicorn = "^20.1.0"
toml = "^0.10.2"
click = "^8.0.1"
rubix-http = {git = "https://github.com/NubeIO/rubix-http", rev = "v1.3.0"}
rubix-registry = { git = "https://github.com/NubeIO/rubix-registry", rev = "v1.1.1" }
rubix-mqtt = {git = "https://github.com/NubeIO/rubix-mqtt", rev = "v1.2.0"}
polling2 = "^0.4.6"
gevent = "latest"
BAC0 = "^21.2.25"
[tool.poetry.dev-dependencies]
pyinstaller = "^4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
